# more_RAG_strategies

./: .gitignore  Dockerfile  README.md  app.py  architecture.mermaid  docker-compose.yml  pyproject.toml  requirements.txt  verify_chat.py  verify_ingestion.py
.github/workflows/: ci.yml
notebooks/: demo_ingestion.ipynb
src/ais_rag/: config.py
src/ais_rag/chatbot/: engine.py  llm_client.py  memory.py  rewriter.py  router.py
src/ais_rag/ingestion/: chunker.py  cleaner.py  hierarchy.py  vector_store.py
src/ais_rag/scraper/: crawler.py  ocr_engine.py
src/rag/: config.py
src/rag/ingestion/: hierarchy.py
tests/: test_core.py
