[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-sport-rag"
version = "1.0.0"
description = "Enterprise RAG for Sports Packages with Hierarchical Indexing"
authors = [
    {name = "MossMojito", email = "your.email@example.com"},
]
dependencies = [
    "gradio>=4.0.0",
    "chromadb",
    "openai",
    "sentence-transformers",
    "crawl4ai"
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
